// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentationTabs should correctly render on customization routes 1`] = `
<ul
  class="md-tabs documentation-tabs"
  role="tablist"
>
  <span
    aria-hidden="true"
  />
  <li
    aria-controls="documentation-panel-0"
    aria-pressed="false"
    aria-selected="true"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--active"
    id="documentation-info"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Info
    </div>
  </li>
  <li
    aria-controls="documentation-panel-1"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-sassdoc"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      SassDoc
    </div>
  </li>
  <span
    class="md-tab-indicator"
    style="height:2px;width:160px;-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  />
</ul>
`;

exports[`DocumentationTabs should correctly render on customization routes 2`] = `
<ul
  class="md-tabs documentation-tabs"
  role="tablist"
>
  <span
    aria-hidden="true"
  />
  <li
    aria-controls="documentation-panel-0"
    aria-pressed="false"
    aria-selected="true"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--active"
    id="documentation-examples"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Examples
    </div>
  </li>
  <li
    aria-controls="documentation-panel-1"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-sassdoc"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      SassDoc
    </div>
  </li>
  <span
    class="md-tab-indicator"
    style="height:2px;width:160px;-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  />
</ul>
`;

exports[`DocumentationTabs should correctly render on customization routes 3`] = `
<ul
  class="md-tabs documentation-tabs"
  role="tablist"
>
  <span
    aria-hidden="true"
  />
  <li
    aria-controls="documentation-panel-0"
    aria-pressed="false"
    aria-selected="true"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--active"
    id="documentation-info"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Info
    </div>
  </li>
  <li
    aria-controls="documentation-panel-1"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-sassdoc"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      SassDoc
    </div>
  </li>
  <span
    class="md-tab-indicator"
    style="height:2px;width:160px;-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  />
</ul>
`;

exports[`DocumentationTabs should render as null when not visible 1`] = `null`;

exports[`DocumentationTabs should render correctly on component routes 1`] = `
<ul
  class="md-tabs documentation-tabs"
  role="tablist"
>
  <span
    aria-hidden="true"
  />
  <li
    aria-controls="documentation-panel-0"
    aria-pressed="false"
    aria-selected="true"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--active"
    id="documentation-examples"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Examples
    </div>
  </li>
  <li
    aria-controls="documentation-panel-1"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-prop-types"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Prop Types
    </div>
  </li>
  <li
    aria-controls="documentation-panel-2"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-sassdoc"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      SassDoc
    </div>
  </li>
  <span
    class="md-tab-indicator"
    style="height:2px;width:160px;-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  />
</ul>
`;

exports[`DocumentationTabs should render correctly on component routes 2`] = `
<ul
  class="md-tabs documentation-tabs"
  role="tablist"
>
  <span
    aria-hidden="true"
  />
  <li
    aria-controls="documentation-panel-0"
    aria-pressed="false"
    aria-selected="true"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--active"
    id="documentation-examples"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Examples
    </div>
  </li>
  <li
    aria-controls="documentation-panel-1"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-prop-types"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Prop Types
    </div>
  </li>
  <li
    aria-controls="documentation-panel-2"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-sassdoc"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      SassDoc
    </div>
  </li>
  <span
    class="md-tab-indicator"
    style="height:2px;width:160px;-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  />
</ul>
`;

exports[`DocumentationTabs should render correctly on component routes 3`] = `
<ul
  class="md-tabs documentation-tabs"
  role="tablist"
>
  <span
    aria-hidden="true"
  />
  <li
    aria-controls="documentation-panel-0"
    aria-pressed="false"
    aria-selected="true"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--active"
    id="documentation-examples"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Examples
    </div>
  </li>
  <li
    aria-controls="documentation-panel-1"
    aria-pressed="false"
    aria-selected="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-tab md-tab--inactive"
    id="documentation-prop-types"
    role="tab"
    tabindex="0"
  >
    <div
      class="md-tab-label"
    >
      Prop Types
    </div>
  </li>
  <span
    class="md-tab-indicator"
    style="height:2px;width:160px;-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  />
</ul>
`;
